<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/productPicture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:padding="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name"
            android:layout_marginBottom="@dimen/normal_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name" />

        <EditText
            android:id="@+id/price"
            android:layout_marginBottom="@dimen/normal_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/price" />

        <EditText
            android:id="@+id/amount"
            android:layout_marginBottom="@dimen/normal_spacing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/amount" />

        <Button
            android:id="@+id/takeProductPicture"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_picture"/>

        <LinearLayout
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/save"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
